# rosrust_tutorial

./: CMakeLists.txt  Cargo.toml  LICENSE  README.md  cp_msg.sh  package.xml
msg/: Hello.msg
src/: Hello.rs  publisher.rs  subscriber.rs
