[package]
name = "rosrust_tutorial"
version = "0.1.0"
authors = ["Takashi Ogura <t.ogura@gmail.com>"]

[dependencies]

rosrust = {git = "https://github.com/adnanademovic/rosrust"}
rustc-serialize = "0.3.0"

[[bin]]
name = "publisher"
path = "src/publisher.rs"

[[bin]]
name = "subscriber"
path = "src/subscriber.rs"
