[package]
name = "rosrust_tutorial"
version = "0.1.0"
authors = ["Takashi Ogura <t.ogura@gmail.com>"]

[dependencies]

#rosrust = {git = "https://github.com/adnanademovic/rosrust"}
rosrust = {git = "https://github.com/OTL/rosrust", branch = "fix_for_string_msg"}
serde = "1.0.2"
serde_derive = "1.0.2"

[[bin]]
name = "publisher"
path = "src/publisher.rs"

[[bin]]
name = "subscriber"
path = "src/subscriber.rs"

[build-dependencies]
#rosrust = {git = "https://github.com/adnanademovic/rosrust"}
rosrust = {git = "https://github.com/OTL/rosrust", branch = "fix_for_string_msg"}
